# coding-challenge

./: .gitignore  README.md
2205-May/pyQRCode/: README.md  main.py
2205-May/pyQRCode/plugins/: email.py  (+2 more)
2205-May/pyQRreader/: main.py
2205-May/pyTOTP/: README.md
2206-June/aoMagic8/: README.md
2206-June/aoRPS/: README.md
2206-June/aoXPlane/: README.md
2207-July/: Cargo.toml
2207-July/rs-bookmark/: Cargo.toml  README.md
2207-July/rs-cat/: Cargo.toml
2207-July/rs-cat/src/: main.rs
2207-July/rs-magic8/: Cargo.toml
2207-July/rs-rps/: Cargo.toml
2207-July/rs-wc/: Cargo.toml
2208-August/day1/: README.md
2208-August/day2/: README.md  alsa_helper.h  note.c
2208-August/day3/: Makefile  README.md  ptone.c
2208-August/day4/: Makefile  PulseDriver.h  README.md  main.cpp
2208-August/day5/: README.md  modinfo.py
2208-August/day6/: Makefile  README.md  displaytrack.cpp  displaytrack.h  main.cpp  modConst.h  modStruct.h  playsample.cpp  playsample.h  slMacros.h
2208-August/part1/: Makefile  tone.c
2208-August/part2/: Makefile  alsa_helper.h  generics.h
2208-August/part4/: AlsaDriver.cpp  AlsaDriver.h  Makefile  PulseDriver.cpp  main.cpp
aoMagic8/: README.md
aoMagic8/magic8/: LCDAnim.ino  LedAnim.ino  magic8.ino
pyQRCode/: .editorconfig  README.md  main.py
pyQRCode/definitions/: manager.py  plugins.py
pyQRCode/plugins/: url.py  vcard.py
pyQRreader/: README.md  main.py  requirements.txt
pyQRreader/definitions/: __init__.py
pyQRreader/plugins/: phone.py  url.py  vcard.py  wifi.py
pyTOTP/: db_helpers.py  main.py  totp_helpers.py
(+77 files in other folders)
