[package]
name = "rs-cat"
version = "0.1.0"
edition = "2021"
authors = [ "Sebastien LEGRAND <oaxley@gmail.com>" ]

description = "Concatenate FILE(s) to standard output."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "cargo"] }
